--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ url: "http://pgt.github.io" # the base hostname & protocol for your site
 github_username:  pgt
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
